--- a/algo/knowledge_base.json
+++ b/algo/knowledge_base.json
@@ -215,6 +215,10 @@
     {
       "question": "My family have 4 people, what i need to buy",
       "answer": "Based on the details provided in the document, for a family of 4 people, you might consider purchasing the following items for the birthday party:\n\n1. Party Kit: Contains decorations, tableware, and accessories to elevate your party atmosphere. It may be beneficial to choose a party kit suitable for children's birthday parties.\n\n2. Balloons: Consider helium-filled options and balloon bouquets in various colors and styles.\n\n3. Banners: Available in different sizes (small, medium, and large) and can be personalized with custom messages or specific graphics.\n\n4. Fringe Curtains: These can add an elegant touch to the party decorations and may be suitable for indoor use.\n\nYou can also mix and match individual items from the Party Kits to create a custom set of decorations according to your preferences. If you have a specific theme in mind, like a children's theme or a particular color scheme, you can mention it to help identify the most suitable decorations for your event."
+    },
+    {
+      "question": "What are the price of balloon ?",
+      "answer": "The average float time for helium-filled balloons is typically 8-12 hours\u30107\u2020source\u3011. If you need further information about the price of balloons, please let me know!"
     }
   ]
 }
