--- a/algo/knowledge_base.json
+++ b/algo/knowledge_base.json
@@ -219,6 +219,18 @@
     {
       "question": "What are the price of balloon ?",
       "answer": "The average float time for helium-filled balloons is typically 8-12 hours\u30107\u2020source\u3011. If you need further information about the price of balloons, please let me know!"
+    },
+    {
+      "question": "do you provide candle",
+      "answer": "Yes, we do provide candles for birthday parties. You can find additional items including candles in our wide range of party decorations and accessories. If you have any specific preferences for the candles, feel free to let us know so we can assist you further."
+    },
+    {
+      "question": "how much money should i spend",
+      "answer": "The document contains information about a wide range of party decorations and accessories, but no specific pricing details. To determine how much money you should spend, it would be best to consider your budget for the birthday party and then explore the options available from the party decoration store. Once you have a budget in mind, you can decide on the type and quantity of decorations to purchase based on your preferences and the available options. If you need further assistance with specific items or themes, feel free to ask!"
+    },
+    {
+      "question": "what kind of gato i should buy",
+      "answer": "Based on the information provided, it seems like you are looking for decorations for a birthday party. You can consider purchasing a Party Kit, which typically contains decorations, tableware, and accessories to elevate the party atmosphere. These kits are suitable for various events including children's birthday parties. Additionally, you may want to explore options such as themed Balloon packages, Banners in different sizes and themes, Scene Setters and Backdrops that can be customized, and eco-friendly Balloons made from biodegradable materials. If you have a specific theme or color scheme in mind, you can also request a personalized design for Scene Setters, Backdrops, and Banners. It's important to note that some decorations, such as Fringe Curtains, may have limitations for outdoor use, so it's advisable to check the product details for recommendations.\n\nIf you need further assistance with specific product details or recommendations, feel free to let me know!"
     }
   ]
 }
